# mongodb4-log-parser

./: .gitignore  Cargo.toml
src/: main.rs  mongodb.rs  parser.rs
