[package]
name = "log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
tokio = { version = "1", features = ["full"] }
bson = { version = "2"}
regex = "1"
chrono = "0.4"
serde_json = "1.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1"