[package]
name = "log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "2.7", default-features = false, features = ["sync"] }
bson = { version = "2"}
clap = "4.4.7"
regex = "1"
chrono = "0.4"
indicatif = "0.15"
rayon = "1.7"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
